@@ -1,5 +1,5 @@
 APACHE 2.0 STATUS:						-*-text-*-
-Last modified at [$Date: 2001/04/03 00:27:08 $]
+Last modified at [$Date: 2001/04/03 01:09:16 $]
 
 Release:
 
@@ -27,9 +27,6 @@ RELEASE SHOWSTOPPERS:
     * Root all file systems with <Directory /> for WIN32/OS2/NW permissions 
         Status: patch brought forward from 1.3.14
                 WIN32 and OS2 need review [William Rowe, Brian Harvard]
-
-    * Win32: Enable the Windows MPM to honor max_requests_per_child
-        Status: FirstBill will fix this?
 
     * Win32: Get Apache working on Windows 95/98. The following work
 	(at least) needs to be done:
