@@ -1,4 +1,6 @@
 Changes with Apache 2.0.16-dev
+  *) Get MaxRequestsPerChild working with the Windows MPM.
+     [Bill Stoddard]
 
   *) Make generic hooks to work, with mod_generic_hook_import/export
      experimental modules.  [Ben Laurie, Will Rowe]
